@@ -65,7 +65,9 @@ def test_long_unclosed_javascript_fragment(lexer_html):
     tokens_body = [
         (Token.Name.Other, 'alert'),
         (Token.Punctuation, '('),
-        (Token.Literal.String.Double, '"hi"'),
+        (Token.Literal.String.Double, '"'),
+        (Token.Literal.String.Double, 'hi'),
+        (Token.Literal.String.Double, '"'),
         (Token.Punctuation, ')'),
         (Token.Punctuation, ';'),
     ]
