@@ -17,6 +17,7 @@ Version 2.7.4
 (not released yet)
 
 - Fixed infinite loop in SML lexer (#1625)
+- Fixed backtracking string regexes in JavaScript/TypeScript lexers (#1637)
 
 
 Version 2.7.3
